--- a/themes/greenvalley/scss/_variables.scss
+++ b/themes/greenvalley/scss/_variables.scss
@@ -33,7 +33,7 @@ $enable-shadows:              true;
 // Spacing
 
 // Body
-$body-bg: #addd63;// darken(#bce380, 7%);
+$body-bg: #fff; // #addd63;// darken(#bce380, 7%);
 $body-color: $gray-900;
 
 // Links
@@ -52,13 +52,14 @@ $font-size-base: 1rem;
 // Buttons
 // Forms
 // Dropdowns
-// Navbar
-$navbar-light-color: $link-color; // #e0d6cc;
+// Navs
+$nav-link-color: $link-color;
+//$navbar-light-color: $link-color; // #e0d6cc;
 $navbar-light-bg: $link-hover-color; //#f8f8f8;
 $navbar-light-border: darken($navbar-light-bg, 6.5%);
 
 // Navbar links
-//$navbar-light-color: #e0d6cc;
+$navbar-light-color: $nav-link-color;
 $navbar-light-hover-color: #cda256;
 $navbar-light-hover-bg: #42281d;
 $navbar-light-active-color: #555555;
